--- a/client/scss/layout.scss
+++ b/client/scss/layout.scss
@@ -3,6 +3,9 @@
 @import "_base.scss";
 @import '../../public/fonts/iconfont.css';
 
+*{
+    font-family: 'Roboto', sans-serif;
+}
 html{
     display: block;
     height:100%;
@@ -187,4 +190,124 @@ html{
     font-size: 2em;
     text-decoration: none !important;
 }
+}
+
+.modal-overlay {
+    position: fixed;
+    z-index: 999;
+    background: rgba(0, 0, 0, 0.26);
+    height: 100%;
+    width: 100%;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    overflow-y: auto;
+    transition: opacity .3s ease;
+    .modal-header {
+    padding: 15px;
+    border-bottom: 1px solid #e5e5e5;
+}
+.modal-body {
+    position: relative;
+    padding: 15px;
+}
+.modal-footer {
+    padding: 15px;
+    text-align: right;
+    border-top: 1px solid #e5e5e5;
+}
+    .modal-content {
+        position: absolute;
+        left: 0;
+        right: 0;
+        margin: auto;
+        max-width: 50%;
+        position: relative;
+        background-color: #fff;
+        -webkit-background-clip: padding-box;
+        background-clip: padding-box;
+        border: 1px solid #999;
+        border: 1px solid rgba(0,0,0,.2);
+        border-radius: 6px;
+        outline: 0;
+        -webkit-box-shadow: 0 3px 9px rgba(0,0,0,.5);
+        box-shadow: 0 3px 9px rgba(0,0,0,.5);
+    }
+}
+.fade-out {
+    opacity: 0;
+    z-index: -1;
+    top: 1000%;
+}
+.fade-in {
+    opacity: 1;
+    z-index:9999;
+    top: 0;
+}
+.btn-success {
+    border-color: #4cae4c;
+}
+.text-center{
+    text-align: center;
+}
+.test-head-row,.test-row,.price-row,.disc-row {
+    display: table;
+    width: 100%;
+     >* {
+        display: table-cell;
+        text-align: left;
+        vertical-align: middle;
+         padding: 9px 6px;
+    }
+}
+.test-head-row {
+    font-weight: bold;
+    text-transform: uppercase;
+    font-size: .9em;
+    color: #5c5c5c;
+        background: #DBDBDB;
+}
+.item-head {
+    width: 52%;
+}
+.list-content {
+    background-color: #F7F7F7;
+}
+.item-qnt {
+    width: 22%;
+}
+.item-mrp,.item-price{
+    width: 13%;
+}
+.col2-row {
+    display: table;
+    width: 100%;
+    >* {
+        display: table-cell;
+        width: 50%;
+    }
+}
+.text-right{
+    text-align: right;
+}
+.price-row{
+    border-top: dotted thin;
+}
+.disc-row{
+    color:#00CF17
+}
+.icon.icon-rupee {
+    font-size: .8em;
+    vertical-align: bottom;
+    line-height: 1.4em;
+}
+.item-qnt > .btn {
+    padding: 4px 4px;
+    background: transparent;
+    position: relative;
+}
+.img-block >img {
+    display: block;
+    max-width: 100%;
 }
