--- a/public/styles/search.css
+++ b/public/styles/search.css
@@ -1,7 +1,7 @@
 @font-face {
 	font-family: "iconfont";
-	src: url("/public/fonts/iconfont.eot?61ead26304003547041346077663ec99?#iefix") format("embedded-opentype"),
-url("/public/fonts/iconfont.woff?61ead26304003547041346077663ec99") format("woff");
+	src: url("/public/fonts/iconfont.eot?c3d5205bc02f9339768181203d47297f?#iefix") format("embedded-opentype"),
+url("/public/fonts/iconfont.woff?c3d5205bc02f9339768181203d47297f") format("woff");
 }
 
 .icon {
@@ -15,26 +15,53 @@ url("/public/fonts/iconfont.woff?61ead26304003547041346077663ec99") format("woff
 	vertical-align: top;
 }
 
-.icon-add-circular-outlined-button:before {
+.icon-appointment:before {
 	content: "\F101";
 }
-.icon-appointment:before {
+.icon-bin:before {
 	content: "\F102";
 }
-.icon-delete-button:before {
+.icon-checked:before {
 	content: "\F103";
 }
-.icon-home-delivery:before {
+.icon-clock:before {
 	content: "\F104";
 }
-.icon-phone:before {
+.icon-delete:before {
 	content: "\F105";
 }
-.icon-round-delete-button:before {
+.icon-doctor:before {
 	content: "\F106";
 }
-.icon-shopping-cart:before {
+.icon-homedelivery:before {
 	content: "\F107";
+}
+.icon-info:before {
+	content: "\F108";
+}
+.icon-location:before {
+	content: "\F109";
+}
+.icon-minus:before {
+	content: "\F10A";
+}
+.icon-parking:before {
+	content: "\F10B";
+}
+.icon-phone:before {
+	content: "\F10C";
+}
+.icon-plus:before {
+	content: "\F10D";
+}
+.icon-rupee:before {
+	content: "\F10E";
+}
+.icon-shopping-cart:before {
+	content: "\F10F";
+}
+.icon-waiting:before {
+	content: "\F110";
 }
 /*test css*/
 /* grey buttons */
@@ -197,6 +224,41 @@ input[type=text], input[type=number] {
 
 button:focus {
   outline: none !important; }
+
+.h4, h4 {
+  font-size: 18px; }
+
+.h4, .h5, .h6, h4, h5, h6 {
+  margin-top: 10px;
+  margin-bottom: 10px; }
+
+.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
+  font-family: inherit;
+  font-weight: 500;
+  line-height: 1.1;
+  color: inherit; }
+
+.curved {
+  border-radius: 25px; }
+
+.btn {
+  display: inline-block;
+  padding: 6px 12px;
+  margin-bottom: 0;
+  font-size: 14px;
+  font-weight: 400; }
+
+.btn-success {
+  background-color: #00CF17;
+  color: black; }
+
+.modal-footer {
+  padding: 15px;
+  text-align: right;
+  border-top: 1px solid #e5e5e5; }
+
+* {
+  font-family: 'Roboto', sans-serif; }
 
 html {
   display: block;
@@ -396,9 +458,125 @@ html {
     font-size: 2em;
     text-decoration: none !important; }
 
+.modal-overlay {
+  position: fixed;
+  z-index: 999;
+  background: rgba(0, 0, 0, 0.26);
+  height: 100%;
+  width: 100%;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  overflow-y: auto;
+  transition: opacity .3s ease; }
+  .modal-overlay .modal-header {
+    padding: 15px;
+    border-bottom: 1px solid #e5e5e5; }
+  .modal-overlay .modal-body {
+    position: relative;
+    padding: 15px; }
+  .modal-overlay .modal-footer {
+    padding: 15px;
+    text-align: right;
+    border-top: 1px solid #e5e5e5; }
+  .modal-overlay .modal-content {
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin: auto;
+    max-width: 50%;
+    position: relative;
+    background-color: #fff;
+    -webkit-background-clip: padding-box;
+    background-clip: padding-box;
+    border: 1px solid #999;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    border-radius: 6px;
+    outline: 0;
+    -webkit-box-shadow: 0 3px 9px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 3px 9px rgba(0, 0, 0, 0.5); }
+
+.fade-out {
+  opacity: 0;
+  z-index: -1;
+  top: 1000%; }
+
+.fade-in {
+  opacity: 1;
+  z-index: 9999;
+  top: 0; }
+
+.btn-success {
+  border-color: #4cae4c; }
+
+.text-center {
+  text-align: center; }
+
+.test-head-row, .test-row, .price-row, .disc-row {
+  display: table;
+  width: 100%; }
+  .test-head-row > *, .test-row > *, .price-row > *, .disc-row > * {
+    display: table-cell;
+    text-align: left;
+    vertical-align: middle;
+    padding: 9px 6px; }
+
+.test-head-row {
+  font-weight: bold;
+  text-transform: uppercase;
+  font-size: .9em;
+  color: #5c5c5c;
+  background: #DBDBDB; }
+
+.item-head {
+  width: 52%; }
+
+.list-content {
+  background-color: #F7F7F7; }
+
+.item-qnt {
+  width: 22%; }
+
+.item-mrp, .item-price {
+  width: 13%; }
+
+.col2-row {
+  display: table;
+  width: 100%; }
+  .col2-row > * {
+    display: table-cell;
+    width: 50%; }
+
+.text-right {
+  text-align: right; }
+
+.price-row {
+  border-top: dotted thin; }
+
+.disc-row {
+  color: #00CF17; }
+
+.icon.icon-rupee {
+  font-size: .8em;
+  vertical-align: bottom;
+  line-height: 1.4em; }
+
+.item-qnt > .btn {
+  padding: 4px 4px;
+  background: transparent;
+  position: relative; }
+
+.img-block > img {
+  display: block;
+  max-width: 100%; }
+
 html {
   background-image: url("https://www.flebie.com/img/ListPage_Cover.jpg");
   background-repeat: no-repeat; }
+
+.container-main {
+  padding-bottom: 200px; }
 
 .loader-wrap {
   position: fixed;
@@ -425,6 +603,65 @@ html {
   float: left;
   padding: 1em; }
   .lab-lists > div > div {
+    position: relative;
     box-shadow: 2px 3px 8px rgba(0, 0, 0, 0.66); }
+
+.lab-lists .item-head {
+  width: 100%;
+  position: relative; }
+
+.striked-price {
+  position: relative;
+  top: 0px;
+  font-size: 18px;
+  padding: 6px;
+  font-weight: bolder; }
+
+.striked-price:before {
+  position: absolute;
+  top: 12px;
+  content: " ";
+  height: 1px;
+  background: #000000;
+  width: 115%;
+  transform: rotate(10deg);
+  left: -5px; }
+
+.actual-price {
+  position: relative;
+  z-index: 2;
+  color: black;
+  background: url("https://www.flebie.com/img/price_ribbon.png");
+  background-size: cover;
+  padding-bottom: 5px;
+  padding-left: 10px; }
+
+.lab-footer {
+  padding: 12px; }
+  .lab-footer h3 {
+    margin: 0px; }
+
+.flebie-btn {
+  background-color: #00cf17;
+  border: medium none;
+  border-radius: 15px;
+  font-weight: bold;
+  line-height: 30px;
+  padding: 0 20px 0 20px;
+  color: #fff; }
+
+.lab-details {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.58);
+  color: #ffffff; }
+
+.clearfix.details-block div {
+  padding: .5em 1em; }
+  .clearfix.details-block div *:before {
+    color: #ffffff; }
+  .clearfix.details-block div .icon {
+    margin-right: 6px; }
 
 /*# sourceMappingURL=search.css.map*/
