--- a/public/fonts/iconfont.css
+++ b/public/fonts/iconfont.css
@@ -1,7 +1,7 @@
 @font-face {
 	font-family: "iconfont";
-	src: url("/public/fonts/iconfont.eot?c3d5205bc02f9339768181203d47297f?#iefix") format("embedded-opentype"),
-url("/public/fonts/iconfont.woff?c3d5205bc02f9339768181203d47297f") format("woff");
+	src: url("/public/fonts/iconfont.eot?777fb5b564320ba811f4d2c5be97074e?#iefix") format("embedded-opentype"),
+url("/public/fonts/iconfont.woff?777fb5b564320ba811f4d2c5be97074e") format("woff");
 }
 
 .icon {
@@ -15,51 +15,66 @@ url("/public/fonts/iconfont.woff?c3d5205bc02f9339768181203d47297f") format("woff
 	vertical-align: top;
 }
 
-.icon-appointment:before {
+.icon-age:before {
 	content: "\f101";
 }
-.icon-bin:before {
+.icon-appointment:before {
 	content: "\f102";
 }
-.icon-checked:before {
+.icon-bin:before {
 	content: "\f103";
 }
-.icon-clock:before {
+.icon-checked:before {
 	content: "\f104";
 }
-.icon-delete:before {
+.icon-clock:before {
 	content: "\f105";
 }
-.icon-doctor:before {
+.icon-delete:before {
 	content: "\f106";
 }
-.icon-homedelivery:before {
+.icon-doctor:before {
 	content: "\f107";
 }
-.icon-info:before {
+.icon-email:before {
 	content: "\f108";
 }
-.icon-location:before {
+.icon-flask:before {
 	content: "\f109";
 }
-.icon-minus:before {
+.icon-homedelivery:before {
 	content: "\f10a";
 }
-.icon-parking:before {
+.icon-info:before {
 	content: "\f10b";
 }
-.icon-phone:before {
+.icon-location:before {
 	content: "\f10c";
 }
-.icon-plus:before {
+.icon-minus:before {
 	content: "\f10d";
 }
-.icon-rupee:before {
+.icon-mob:before {
 	content: "\f10e";
 }
-.icon-shopping-cart:before {
+.icon-parking:before {
 	content: "\f10f";
 }
-.icon-waiting:before {
+.icon-phone:before {
 	content: "\f110";
+}
+.icon-plus:before {
+	content: "\f111";
+}
+.icon-rupee:before {
+	content: "\f112";
+}
+.icon-shopping-cart:before {
+	content: "\f113";
+}
+.icon-user:before {
+	content: "\f114";
+}
+.icon-waiting:before {
+	content: "\f115";
 }
